--- a/classes/pages/generate.html
+++ b/classes/pages/generate.html
@@ -133,7 +133,7 @@
                 const newRecord = recordTemplate.clone()
                 newRecord.find('#index').val(record.index)
                 newRecord.find('#title').val(record.title)
-                newRecord.find('#interpretatoin').val(record.interpretation)
+                newRecord.find('#interpretation').val(record.interpretation)
                 $('.content').append(newRecord)
             }
         }
